--- a/index.html
+++ b/index.html
@@ -197,6 +197,19 @@
 							</div>
 						</a>
 					</div>
+					
+					<div class="portfolio-item swiper-slide  slideshow" data-groups="all slideshow">
+						<a href="https://github.com/Suraj-Bansal/Recurrent-Neural-Network-for-Google-Stock-Price-Prediction" target="_blank" class="portfolio-item--content">
+							<div class="portfolio-item--img b-box">
+								<img src="assets/images/stocklstm.jpg" class="img-fluid mx-auto" alt="work-img">
+							</div>
+							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
+								<div class="portfolio-item--desc-in">
+									<h3 class="mb-2 text-white">GOOGLE STOCK PREDICTION</h3>
+								</div>
+							</div>
+						</a>
+					</div>
 
 					<div class="portfolio-item swiper-slide image" data-groups="all image">
 						<a href="https://drive.google.com/file/d/10nBSPSkaKlkVn7yOUCLjWkNUwt6DJEsD/view?usp=sharing" target="_blank" class="portfolio-item--content">
