--- a/index.html
+++ b/index.html
@@ -412,11 +412,11 @@
 						<h3>| Learn More</h3>
 						<p>
 							<a href="assets/resume/SurajResume.pdf" class="text-black-50"target="_blank">Resume —</a> <br>
+							<a href="https://github.com/Suraj-Bansal" class="text-black-50" target="_blank">Github —</a> <br>							
+							<a href="https://twitter.com/SurajBansal2003" class="text-black-50" target="_blank">Twitter —</a> <br>
 							<a href="https://www.linkedin.com/in/suraj-bansal/" class="text-black-50" target="_blank">LinkedIn —</a> <br>
 							<a href="https://tks.life/profile/suraj.bansal" class="text-black-50" target="_blank">Portfolio —</a> <br>
-							<a href="https://github.com/Suraj-Bansal" class="text-black-50" target="_blank">Github —</a> <br>
 							<a href="https://medium.com/@bansalsuraj03" class="text-black-50" target="_blank">Medium —</a> <br>
-							<a href="https://www.youtube.com/channel/UCxDCH862Hve_R8O47qK2WbA?view_as=subscriber" class="text-black-50" target="_blank">Youtube —</a> <br>
 						</p>
 						
 					</div>
