--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section section-freelance section-light text-center" id = "connect2" style="background-image:url(/../assets/images/work.jpg)">
+		<section class="section section-freelance section-light text-center" id = "connect2" style="background-image:url(assets/images/work.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
