--- a/index.html
+++ b/index.html
@@ -490,6 +490,21 @@
 									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
 								</div>
 							</a>
+							<a href="https://medium.com/datadriveninvestor/predicting-apple-stock-prices-with-lstm-79456ba0b904" target="_blank"  class="swiper-slide blog-list b-box hover-state d-block mb-4">
+								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".4s">
+									<img src="assets/images/stock.jpg" alt="Blog Image" class="img-fluid">
+									<div class="blog-list--details d-flex justify-content-center align-items-center">
+										<div class="blog-list--details-in">
+											<p class="blog-by text-white">Suraj Bansal</p>
+											<span class="blog-duration text-white">8-Minute Read</span>
+										</div>
+									</div>
+								</div>
+								<div class="blog-list--desc p-3">
+									<p>Apple stock predictions with LSTM's- accuracy rate of 98.3%</p>
+									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
+								</div>
+							</a>
 							<a href="https://medium.com/datadriveninvestor/markov-decision-processes-learning-some-math-b82448169927" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
 								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".4s">
 									<img src="assets/images/markovs.png" alt="Blog Image" class="img-fluid">
