--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Suraj Bansal</title>
-	<meta name="description" content="Suraj Bansal - Personal Wesbite" />
+	<meta name="description" content="Suraj Bansal - Personal Website" />
 	<meta name="keywords" content="suraj, bansal, machine learning developer, AI enthusiast, healthcare, student, portfolio" />
 	<meta name="author" content="Suraj Bansal" />
 	<meta name="theme-color" content="#2a2d35">
