--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
 								<p class="mt-4 font-weight-light">Hey there! I'm 16 and currently learning full-stack and machine learning development. I'm currently interested in public health and autonomous vehicles, specifically their intersections with AI. Recent work involves polyp detection and  financial prediction models, open-source autonomous vehicles software and consulting work for Sidewalk Labs and Kidogo. Let's talk more!</p>
 							</div>
 							<ul class="about-desc-social mt-4 list-unstyled list-inline">
-		                        <li class="list-inline-item"><a href="https://github.com/Suraj-Bansal" target="_blank"><i class="fab fa-github"></i></a></li>
-								<li class="list-inline-item"><a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
 								<li class="list-inline-item"><a href="https://twitter.com/SurajBansal2003" target="_blank"><i class="fab fa-twitter"></i></a></li>
-		                        <li class="list-inline-item"><a href="https://medium.com/@bansalsuraj03" target="_blank"><i class="fab fa-medium"></i></a></li>
-		                    </ul>
+		                  <li class="list-inline-item"><a href="https://github.com/Suraj-Bansal" target="_blank"><i class="fab fa-github"></i></a></li>
+								<li class="list-inline-item"><a href="https://www.linkedin.com/in/suraj-bansal/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+		                  <li class="list-inline-item"><a href="https://medium.com/@bansalsuraj03" target="_blank"><i class="fab fa-medium"></i></a></li>
+		              </ul>
 						</div>
 					</div>
 
@@ -115,16 +115,16 @@
 						<h5 class="section-subHead mt-0"> My Experience—</h5>
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s">
 							<div>
-								<h5>Research Assistant</h5>
-								<h6 class="badge badge-dark d-inline-block my-3">June 2019 | St. Michaels Research Centre</h6>
-								<p>Volunteered with research constructing virtual reality polypectomy simulations for UofT gastroenterology residents. </p>
+								<h5>Keenan Research Summer Student</h5>
+								<h6 class="badge badge-dark d-inline-block my-3">June 2019 - July 2019 | St. Michaels Research Centre</h6>
+								<p>Volunteered with research constructing virtual reality polypectomy simulations for UofT gastroenterology residents.</p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
 							<div>
-								<h5>Innovation Consultant</h5>
-								<h6 class="badge badge-dark d-inline-block my-3">2019-2020 | Sidewalk Labs</h6>
-								<p>Created innovation plan to reduce household expenditures through shared economics and an end-to-end platform that monetizes personal assets.</p>
+								<h5>Summer Intern</h5>
+								<h6 class="badge badge-dark d-inline-block my-3">August 2019 | Baylor Scott and White Health</h6>
+								<p>Shadowed physicians in Internal Medicine, Trauma and Cardiovascular Diseases for rounds and procedures in the Dallas, Texas location.</p>
 							</div>
 						</div>
 					</div>
@@ -134,14 +134,14 @@
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s">
 							<div>
 								<h5>Bayview Secondary School</h5>
-								<h6 class="badge badge-dark d-inline-block my-3">2017-Present</h6>
+								<h6 class="badge badge-dark d-inline-block my-3">September 2017 - Present</h6>
 								<p>International Baccalaureate Diploma candidate and honours student. Grade 11 Average: 96%.</p>
 							</div>
 						</div>
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay=".2s">
 							<div>
 								<h5>The Knowledge Society</h5>
-								<h6 class="badge badge-dark d-inline-block my-3">2019-Present</h6>
+								<h6 class="badge badge-dark d-inline-block my-3">September 2019 - Present</h6>
 								<p>World Economic Forum school that emulates MIT, Stanford and Harvard education model's while replicating Silicon Valley environment to provide Olympic-level CEO training.</p>
 							</div>
 						</div>
