--- a/index.html
+++ b/index.html
@@ -163,6 +163,19 @@
 				<div class=" swiper-wrapper">
 
 					<div class="portfolio-item swiper-slide image" data-groups="all image">
+						<a href="assets/RydeDeck.pdf" target="_blank" class="portfolio-item--content">
+							<div class="portfolio-item--img b-box">
+								<img src="assets/images/rydedeck1.jpg" class="img-fluid mx-auto" alt="work-img">
+							</div>
+							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
+								<div class="portfolio-item--desc-in">
+									<h3 class="mb-2 text-white">RYDE STANDALONE DECK</h3>
+								</div>
+							</div>
+						</a>
+					</div>
+
+					<div class="portfolio-item swiper-slide image" data-groups="all image">
 						<a href="assets/Kidogo.pdf" target="_blank" class="portfolio-item--content">
 							<div class="portfolio-item--img b-box">
 								<img src="assets/images/kidogochallenge.jpg" class="img-fluid mx-auto" alt="work-img">
@@ -241,6 +254,19 @@
 			</div>
 			<div class="container swiper-container swiper-portfolio wow fadeInUp" data-wow-duration="1.5s">
 				<div class=" swiper-wrapper">
+
+					<div class="portfolio-item swiper-slide image" data-groups="all image">
+						<a href="assets/RydeDeck.pdf" target="_blank" class="portfolio-item--content">
+							<div class="portfolio-item--img b-box">
+								<img src="assets/images/rydedeck2.jpg" class="img-fluid mx-auto" alt="work-img">
+							</div>
+							<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
+								<div class="portfolio-item--desc-in">
+									<h3 class="mb-2 text-white">RYDE STANDALONE DECK</h3>
+								</div>
+							</div>
+						</a>
+					</div>
 
 					<div class="portfolio-item swiper-slide image" data-groups="all image">
 						<a href="assets/Kidogo.pdf" target="_blank" class="portfolio-item--content">
