--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="section section-freelance section-light text-center" id = "connect2" style="background-image:url(assets/images/work.jpg)">
+		<section class="section section-freelance section-light text-center" id = "connect2" style="background-image:url(../assets/images/work.jpg)">
 			<div class="container">
 				<div class="row">
 					<div class="col-lg-12">
@@ -544,6 +544,21 @@
 								<div class="blog-list--desc p-3">
 									<p>Markovs Decision Processes- Math and Theorems</p>
 									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Artificial Intelligence</span>
+								</div>
+							</a>
+							<a href="https://medium.com/datadriveninvestor/autonomous-vehicle-technology-explained-42bd71badd90" target="_blank" class="swiper-slide blog-list b-box hover-state d-block mb-4">
+								<div class="blog-list--img wow fadeIn" data-wow-duration="1.5s" data-wow-delay=".4s">
+									<img src="assets/images/av.png" alt="Blog Image" class="img-fluid">
+									<div class="blog-list--details d-flex justify-content-center align-items-center">
+										<div class="blog-list--details-in">
+											<p class="blog-by text-white">Suraj Bansal</p>
+											<span class="blog-duration text-white">6-Minute Read</span>
+										</div>
+									</div>
+								</div>
+								<div class="blog-list--desc p-3">
+									<p>Autonomous Vehicle Technology Explained</p>
+									<span class="d-block text-center mt-3 font-weight-bold blog-cat">Autonomous Vehicles</span>
 								</div>
 							</a>
 						</div>
