--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 						<div class="resume-list b-box hover-state p-4 mt-4 wow fadeInUp" data-wow-duration="1.5s">
 							<div>
 								<h5>Keenan Research Summer Student</h5>
-								<h6 class="badge badge-dark d-inline-block my-3">June 2019 - July 2019 | St. Michaels Research Centre</h6>
+								<h6 class="badge badge-dark d-inline-block my-3">June 2019 | St. Michaels Research Centre</h6>
 								<p>Volunteered with research constructing virtual reality polypectomy simulations for UofT gastroenterology residents.</p>
 							</div>
 						</div>
