--- a/index.html
+++ b/index.html
@@ -575,53 +575,44 @@
 		<!-- END: CONTENT -->
 
 		<!-- START: CONTACT -->
-		<section class="section section-dark section-contact" id="contact1">
-			<div class="fullwidth">
-				<div id="fixedFooter">
-					<div class="col-6">
-						<h3>| GIVE ME A SUMMARY</h3>
-						<p>
-							Hey there! My name is Suraj Bansal. I'm a student developer based in Toronto that's currently focused on machine learning development and full-stack development.<br>
-						</P>
-						<p>
-							Some recent work involves building open-source autonomous vehicle software to democratize the industry and break the affordability barrier<br>
-						</p>
-						<p>
-							I'm currently seeking growth opportunities in software development for autonomous vehicles or healthcare innovation- reach out anytime!<br>
-						</p>
-					</div>
-					<div class="col-3">
-						<h3>| LEARN MORE</h3>
-						<p>
-							<a href="assets/resume/SurajResume.pdf" class="text-black-50"target="_blank">Resume —</a> <br>
-							<a href="https://twitter.com/surajbansal2003" class="text-black-50" target="_blank">Twitter —</a> <br>
-							<a href="https://github.com/Suraj-Bansal" class="text-black-50" target="_blank">Github —</a> <br>
-							<a href="https://www.linkedin.com/in/suraj-bansal/" class="text-black-50" target="_blank">LinkedIn —</a> <br>
-							<a href="https://tks.life/profile/suraj.bansal" class="text-black-50" target="_blank">Portfolio —</a> <br>
-							<a href="https://medium.com/@bansalsuraj03" class="text-black-50" target="_blank">Medium —</a> <br>
-						</p>
-						
-					</div>
-					<div class="col-3">
-						<h3>| CONTACT ME NOW</h3>
-						<a href="mailto:bansalsuraj03@gmail.com" class="text-black-50">bansalsuraj03@gmail.com</a> <br>
-						<a class="text-black-50">Phone Number and Calendly Available Upon Request</a> <br>
-					</div>
+		<section class="section section-dark section-contact" id = "contact1">
+			<div class="container footer-container">
+				<div>
+					<h4 class = "footer-title">GIVE ME A SUMMARY</h4>
+					<p>Hey there! My name is Suraj Bansal. I'm a student developer based in Toronto that's currently focused on machine learning development and full-stack development. Some recent work involves building open-source autonomous vehicle software to democratize the industry and break the affordability barrier. I'm currently seeking growth opportunities in software development for autonomous vehicles or healthcare innovation- reach out anytime!</p>
+				</div>
+				<div>
+					<h4 class = "footer-title">LEARN MORE</h4>
+					<ul>
+						<li class = "footer-link">
+							<a href="assets/resume/SurajResume.pdf" class="reachout"target="_blank">— Resume —</a>
+						</li>
+						<li class = "footer-link">
+							<a href="https://github.com/Suraj-Bansal" class="reachout" target="_blank">— Github —</a>
+						</li>
+						<li class = "footer-link">
+							<a href="https://twitter.com/surajbansal2003" class="reachout" target="_blank">— Twitter —</a>
+						</li>
+						<li class = "footer-link">
+							<a href="https://www.linkedin.com/in/suraj-bansal/" class="reachout" target="_blank">— LinkedIn —</a>
+						</li>
+						<li class = "footer-link">
+							<a href="mailto:bansalsuraj03@gmail.com" class="reachout">— Contact Email —</a>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</section>
 		<section class="section section-dark section-contact" id="contact2">
-			<div class="fullwidth">
-				<div id="fixedFooter">
-					<div class="section-head">
-						<h2>SUMMARIZE AND LEARN MORE</h2>
-					</div> 
-					<p>Hey! My name is Suraj Bansal and I'm learning full-stack and machine learning development. I'm currently looking for growth opportunities with software development for public health or autonomous vehicles.</p>
-					<br>
-						<p>
-							<a href="malito:bansalsuraj03@gmail.com" class="text-black-50" target="_blank">Email | </a><a href="https://twitter.com/surajbansal2003" class="text-black-50" target="_blank">Twitter | </a> <a href="https://www.linkedin.com/in/suraj-bansal/" class="text-black-50" target="_blank">LinkedIn | </a><a href="https://github.com/Suraj-Bansal" class="text-black-50" target="_blank">Github</a>
-						</p>
-					</div>
+			<div class="container">
+				<div class="section-head">
+					<h2>SUMMARIZE AND LEARN MORE</h2>
+				</div> 
+				<p>Hey! My name is Suraj Bansal and I'm learning full-stack and machine learning development. I'm currently looking for growth opportunities with software development for public health or autonomous vehicles.</p>
+				<br>
+					<p>
+						<a href="malito:bansalsuraj03@gmail.com" class="text-black-50" target="_blank">Email | </a><a href="https://twitter.com/surajbansal2003" class="text-black-50" target="_blank">Twitter | </a> <a href="https://www.linkedin.com/in/suraj-bansal/" class="text-black-50" target="_blank">LinkedIn | </a><a href="https://github.com/Suraj-Bansal" class="text-black-50" target="_blank">Github</a>
+					</p>
 				</div>
 			</div>
 		</section>
@@ -630,8 +621,9 @@
 
 		<!--START: FOOTER-->
 		<footer class="footer section section-light">
-			<div class="container">
-				<p class="copyright text-center mb-0">&copy; Suraj Bansal 2020 | All Right Reserved</p>
+			<div class="container copyright">
+				<hr>
+				<p class="copyright text-center mb-0">Developed by <span class="name">Suraj Bansal</span> | All Right Reserved</p>
 			</div>
 		</footer>
 		<!--END: FOOTER-->
