--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                </div>
                <div class="swiper-slide shadow px-bounce">
                   <div class = "experience-title">
-                     <h5>Director of Logistics</h5>
+                     <h5>Logistics Director</h5>
                      <h6>Richmond Hill Youth Action Committee</h6>
                   </div>
                   <div class="experience-logo">
