--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 
    <!-- Favicon -->
-   <link rel="icon" href="assets/images/favicon.png">
+   <link rel="icon" href="assets/images/favicon.ico">
 
    <!-- JQuery -->
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
