--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable =no">
 
    <meta name="description" content="Suraj Bansal - Personal Website" />
 	<meta name="keywords" content="suraj, bansal, student, technology, research, developer, healthcare, autonomous vehicles, ryde AI, machine learning, portfolio" />
