--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
                <p><span class="text-emphasis high-emphasis-text"> ←  </span>Drag left or right to view more <span class="text-emphasis high-emphasis-text">  → </span></p>
             </div>
          </div>
-         <div class="swiper-container-mobile">
+         <div class="container-2 swiper-container-mobile">
             <div class="swiper-wrapper">
                <div class="swiper-slide shadow px-bounce">
                   <div class = "experience-title">
