mobile fade effect

--- a/index.html
+++ b/index.html
@@ -296,8 +296,8 @@
                <div>
                   <h4>Always Learning, <a href="#software-projects-mobile"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p>Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer from Toronto fascinated with healthcare innovation and autonomous vehicles. I'm currently developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a> and learning <span class = "text-emphasis p-bold"> full-stack development</span>.</p>
-                  <p>You'll usually find me attempting to emulate my culinary idols- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reach out if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!
+                  <p">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer from Toronto fascinated with healthcare innovation and autonomous vehicles. I'm currently developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a> and learning <span class = "text-emphasis p-bold"> full-stack development</span>.</p>
+                  <p">You'll usually find me attempting to emulate my culinary idols- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reach out if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
@@ -308,14 +308,14 @@
       <!-- Work Experience -->
       <section class="section section-1" id="experience-mobile">
          <div class="container">
-            <div class="section-head center-text uppercase">
+            <div class="section-head center-text uppercase fade-mobile">
                <h2>Work Experience</h2>
             </div>
-            <div class="center-text experience-arrow low-emphasis-text">
+            <div class="center-text experience-arrow low-emphasis-text fade-mobile">
                <p><span class="text-emphasis high-emphasis-text"> ←  </span>Drag left or right to view more <span class="text-emphasis high-emphasis-text">  → </span></p>
             </div>
          </div>
-         <div class="container-2 swiper-container-mobile">
+         <div class="container-2 swiper-container-mobile fade-mobile">
             <div class="swiper-wrapper">
                <div class="swiper-slide shadow px-bounce">
                   <div class = "experience-title">
@@ -382,18 +382,18 @@
                </div>
             </div>
          </div>
-         <div class="container center-text high-emphasis-text italicize cta">
+         <div class="container center-text high-emphasis-text italicize cta fade-mobile">
             <h6>I'm always interested in growth opportunities for software development; I've linked my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a> for your perusal!</h6>
          </div>
       </section>
       <!-- Software Projects -->
       <section class="section section-2" id="software-projects-mobile">
          <div class="container">
-            <div class="section-head center-text uppercase">
+            <div class="section-head center-text uppercase fade-mobile">
                <h2>Software Projects</h2>
             </div>
             <div class="project-grid">
-               <div class="project small-bounce">
+               <div class="project small-bounce fade-mobile">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/aryanmisra/ryde" target = "_blank">Ryde AI</a></h5>
                   <p>Open-source L2 self-driving car software to democratize autonomous vehicles with your smartphone.</p>
                   <div class="project-row">
@@ -402,7 +402,7 @@
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://ryde.netlify.app/" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
-               <div class="project small-bounce">
+               <div class="project small-bounce fade-mobile">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/polyp-detection-model-" target = "_blank">Polyp Detection</a></h5>
                   <p>Leveraged convolutional neural networks to achieve an accuracy rate 20% higher than industry.</p>
                   <div class="project-row">
@@ -411,7 +411,7 @@
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://www.youtube.com/watch?v=PpDxrAVjENg" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
-               <div class="project small-bounce">
+               <div class="project small-bounce fade-mobile">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/LSTM-for-Apple-Stock-Predictions" target = "_blank">Stock Prediction</a></h5>
                   <p>Used LSTM Neural Networks to predict Apple stock prices from 2010-2016 with an accuracy of 98.3%.</p>
                   <div class="project-row">
@@ -420,7 +420,7 @@
                      <h6 class = "italicize low-emphasis-text p-spa"><a href = "https://medium.com/datadriveninvestor/predicting-apple-stock-prices-with-lstm-79456ba0b904" target = "_blank">Learn More!</a></h6>
                   </div>
                </div>
-               <div class="project small-bounce">
+               <div class="project small-bounce fade-mobile">
                   <h5><i class="fa fab fa-github rotate"></i><a href="https://github.com/Suraj-Bansal/frontline-connect-canada" target = "_blank">Frontline Connect</a></h5>
                   <p>Developed the website for a physician-led grassroots Covid-19 relief initiative for virtual communication in hospitals.</p>
                   <div class="project-row">
@@ -435,19 +435,19 @@
       <!-- Consulting Work -->
       <section class="section section-1" id="consulting-work">
          <div class="container">
-            <div class="section-head center-text uppercase">
+            <div class="section-head center-text uppercase fade-mobile">
                <h2>Consulting Work</h2>
             </div>
             <div class="consulting-grid">
-               <div class="deck-cover center-text">
+               <div class="deck-cover center-text fade-mobile">
                   <a href="assets/documents/sidewalklabs.pdf" class = "small-bounce" target="_blank"><img src="assets/images/sidewalklabs.png"></a>
                   <p><a href="https://www.sidewalklabs.com/" class = "company">Sidewalk Labs</a> | Toronto</p>
                </div>
-               <div class="deck-cover center-text">
+               <div class="deck-cover center-text fade-mobile">
                   <a href="assets/documents/zappos.pdf" class = "small-bounce" target="_blank"><img src="assets/images/ryde.png"></a>
                   <p><a href="https://www.zappos.com/" class = "company">Zappos</a> | Las Vegas</p>
                </div>
-               <div class="deck-cover center-text">
+               <div class="deck-cover center-text fade-mobile">
                   <a href="assets/documents/kidogo.pdf" class = "small-bounce" target="_blank"><img src="assets/images/kidogo.png"></a>
                   <p><a href="https://www.kidogo.co/" class = "company">Kidogo</a> | Nairobi</p>
                </div>
