--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <span
                class="txt-rotate fade"
                data-period="2000"
-               data-rotate='[ "SOFTWARE DEVELOPER", "FOOD CONNOISSEUR", "GUITARIST", "COFFEE ENTHUSIAST" ]'></span>
+               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "FOOD CONNOISSEUR", "GUITARIST", "COFFEE ENTHUSIAST" ]'></span>
          </h3>
          <ul class="socials fa-ul">
             <li class="individual-social"><a href="malito:bansalsuraj03@gmail.com" target="_blank" class = "bounce fade"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
@@ -68,8 +68,8 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer from Toronto fascinated with healthcare innovation and autonomous vehicles. I'm currently developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a> and learning <span class = "text-emphasis p-bold"> full-stack development</span>.</p>
-                  <p class = "fade">You'll usually find me attempting to emulate my culinary idols- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reach out if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer and student researcher from Toronto fascinated with healthcare innovation and autonomous vehicles. I'm currently learning full-stack development, <a href="https://sites.google.com/view/lnsbsp/home" target="_blank" class="text-emphasis p-bold p-spaced-underline">researching computational neuroscience</a> to uncover information processing mechanisms and developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a>.</p>
+                  <p class = "fade">You'll usually find me emulating my culinary idols- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!
                </div>
                <div class = "about-image fade">
                   <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
@@ -86,6 +86,15 @@
          </div>
          <div class="swiper-container">
             <div class="swiper-wrapper">
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Research Intern</h5>
+                     <h6>Krembil Research Institute</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/krembil.png" style = "width:65px;height65px">
+                  </div>
+               </div>
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
                      <h5>Prime Minister</h5>
@@ -156,7 +165,7 @@
             <div class="swiper-button-prev fade"></div>
          </div>
          <div class="container center-text high-emphasis-text italicize cta fade">
-            <h6>I'm always interested in growth opportunities for software development; I've linked my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a> for your perusal!</h6>
+            <h6>I'm always interested in growth opportunities for software development or research; I've linked my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a> for your perusal!</h6>
          </div>
       </section>
       <!-- Software Projects -->
@@ -272,7 +281,7 @@
             <span
                class="txt-rotate"
                data-period="2000"
-               data-rotate='[ "SOFTWARE DEVELOPER", "FOOD CONNOISSEUR", "GUITARIST", "COFFEE ENTHUSIAST" ]'></span>
+               data-rotate='[ "SOFTWARE DEVELOPER", "STUDENT RESEARCHER", "FOOD CONNOISSEUR", "GUITARIST", "COFFEE ENTHUSIAST" ]'></span>
          </h3>
          <ul class="socials fa-ul">
             <li class="individual-social"><a href="malito:bansalsuraj03@gmail.com" target="_blank" class = "bounce"><i class="fa-li fa fa fa-envelope-o fa-2x"></i></a></li>
@@ -296,8 +305,8 @@
                <div>
                   <h4>Always Learning, <a href="#software-projects-mobile"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer from Toronto fascinated with healthcare innovation and autonomous vehicles. I'm currently developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a> and learning <span class = "text-emphasis p-bold"> full-stack development</span>.</p>
-                  <p">You'll usually find me attempting to emulate my culinary idols- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reach out if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer and student researcher from Toronto fascinated with healthcare innovation and autonomous vehicles. I'm currently learning full-stack development, researching <a href="https://sites.google.com/view/lnsbsp/home" target="_blank" class="text-emphasis p-bold p-spaced-underline"> computational neuroscience</a> to uncover information processing mechanisms and developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">autonomous vehicle software</a>.</p>
+                  <p class = "fade">You'll usually find me attempting to emulate my culinary idols- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
@@ -317,6 +326,15 @@
          </div>
          <div class="container-2 swiper-container-mobile fade-mobile">
             <div class="swiper-wrapper">
+               <div class="swiper-slide shadow px-bounce">
+                  <div class = "experience-title">
+                     <h5>Research Intern</h5>
+                     <h6>Krembil Research Institute</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/krembil.png" style = "width:65px;height65px">
+                  </div>
+               </div>
                <div class="swiper-slide shadow px-bounce">
                   <div class = "experience-title">
                      <h5>Prime Minister</h5>
@@ -383,7 +401,7 @@
             </div>
          </div>
          <div class="container center-text high-emphasis-text italicize cta fade-mobile">
-            <h6>I'm always interested in growth opportunities for software development; I've linked my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a> for your perusal!</h6>
+            <h6>I'm always interested in growth opportunities for software development and research; I've linked my <a href = "assets/documents/Suraj Bansal- Resume.pdf" target = "_blank">resume</a> for your perusal!</h6>
          </div>
       </section>
       <!-- Software Projects -->
