--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                <div>
                   <h4 class = "fade">Always Learning, <a href="#software-projects"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer and student researcher from Toronto fascinated with healthcare innovation and autonomous vehicles. I'm currently learning full-stack development, <a href="https://sites.google.com/view/lnsbsp/home" target="_blank" class="text-emphasis p-bold p-spaced-underline">researching computational neuroscience</a> to uncover information processing mechanisms and developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a>.</p>
-                  <p class = "fade">You'll usually find me emulating my culinary idols- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer and student researcher from Toronto fascinated with computational biochemistry and healthcare innovation. I'm currently learning full-stack development, developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a> and researching the stemness state of leukemia stem cells for targeted therapeutics and profiling tumour microenvironemnts with single-cell RNA sequencing at the <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Cetnre</a>.</p>
+                  <p class = "fade">You'll usually find me emulating my culinary paragons- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!</p>
                </div>
                <div class = "about-image fade">
-                  <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
+                  <img src="assets/images/about1.jpeg" style = "width:275px;height:275px">
                </div>
             </div>
          </div>
@@ -89,10 +89,10 @@
                <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
                      <h5>Research Intern</h5>
-                     <h6>Krembil Research Institute</h6>
+                     <h6>Princess Margaret Cancer Centre</h6>
                   </div>
                   <div class="experience-logo">
-                     <img src="assets/images/logos/krembil.png" style = "width:65px;height65px">
+                     <img src="assets/images/logos/uhnpmcc.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow px-bounce fade">
@@ -156,6 +156,15 @@
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/yac.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Teaching Assistant</h5>
+                     <h6>Spastic Society of Karnataka</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/ssk.png" style = "width:65px;height65px">
                   </div>
                </div>
             </div>
@@ -305,8 +314,8 @@
                <div>
                   <h4>Always Learning, <a href="#software-projects-mobile"><span class="spaced-underline">Always Coding</span></a></h4>
                   <br>
-                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer and student researcher from Toronto fascinated with healthcare innovation and autonomous vehicles. I'm currently learning full-stack development, researching <a href="https://sites.google.com/view/lnsbsp/home" target="_blank" class="text-emphasis p-bold p-spaced-underline"> computational neuroscience</a> to uncover information processing mechanisms and developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline">autonomous vehicle software</a>.</p>
-                  <p class = "fade">You'll usually find me attempting to emulate my culinary idols- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over some cold brew!</p>
+                  <p class = "fade">Hey there! My name is <span class = "text-emphasis p-bold">Suraj Bansal</span>- I'm a 16 y/o software developer and student researcher from Toronto fascinated with computational biochemistry and healthcare innovation. I'm currently learning full-stack development, developing open-source <a href = "https://ryde.netlify.app/" target="_blank" class = "text-emphasis p-bold p-spaced-underline" >autonomous vehicle software</a> and researching the stemness state of leukemia stem cells for targeted therapeutics and profiling tumour microenvironemnts with single-cell RNA sequencing at the <a href="https://www.uhn.ca/PrincessMargaret" target="_blank" class="text-emphasis p-bold p-spaced-underline">Princess Margaret Cancer Cetnre</a>.</p>
+                  <p class = "fade">You'll usually find me emulating my culinary paragons- Gordon Ramsey and Jamie Olivier, learning new guitar covers, playing hockey, or studying philosophy. Reachout if you have startup ideas in <span class = "text-emphasis p-bold">software development</span>, an interesting <span class = "text-emphasis p-bold">Covid-19 research study</span>, or just talking over cold brew!</p>
                </div>
                <div class = "about-image center-text">
                   <img src="assets/images/about1.jpeg" style = "width:250px;height:250px">
@@ -326,13 +335,13 @@
          </div>
          <div class="container-2 swiper-container-mobile fade-mobile">
             <div class="swiper-wrapper">
-               <div class="swiper-slide shadow px-bounce">
+               <div class="swiper-slide shadow px-bounce fade">
                   <div class = "experience-title">
                      <h5>Research Intern</h5>
-                     <h6>Krembil Research Institute</h6>
+                     <h6>Princess Margaret Cancer Centre</h6>
                   </div>
                   <div class="experience-logo">
-                     <img src="assets/images/logos/krembil.png" style = "width:65px;height65px">
+                     <img src="assets/images/logos/uhnpmcc.png" style = "width:65px;height65px">
                   </div>
                </div>
                <div class="swiper-slide shadow px-bounce">
@@ -396,6 +405,15 @@
                   </div>
                   <div class="experience-logo">
                      <img src="assets/images/logos/yac.png" style = "width:65px;height65px">
+                  </div>
+               </div>
+               <div class="swiper-slide shadow px-bounce fade">
+                  <div class = "experience-title">
+                     <h5>Teaching Assistant</h5>
+                     <h6>Spastic Society of Karnataka</h6>
+                  </div>
+                  <div class="experience-logo">
+                     <img src="assets/images/logos/ssk.png" style = "width:65px;height65px">
                   </div>
                </div>
             </div>
